fix shipping interface
